--- a/all/modules/custom/iddnodeform/css/iddsurvey.css
+++ b/all/modules/custom/iddnodeform/css/iddsurvey.css
@@ -75,3 +75,8 @@ a.printButton {background-color: #388dc1; display: block;   border-radius: 6px 6
 .main-container h3, .main-container .h3 {font-size: 1.2em; }
 p.nextSec a {padding: 10px; font-weight: bold;}
 .finalWarn { color: red; text-decoration: underline; }
+/* .noSelect {
+    user-select: none;
+    pointer-events: none
+}
+.nav.vertical-tabs-list > li > a.tabFilled.noSelect, .nav.vertical-tabs-list > li > a.noSelect {background-color: #ccc; color: #878787; } */
